<resources>
    <string name="app_name">Wheres the toilet</string>
    <string name="register">Регистрация</string>
    <string name="username">Имя пользователя</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Повтор пароля</string>
    <string name="do_reg">Зарегистрироваться</string>
    <string name="already_have_account">У меня уже есть аккаунт</string>
    <string name="back">Назад</string>
    <string name="login">Вход</string>
    <string name="login_proceed">Войти</string>
    <string name="dont_have_account">У меня ещё нет аккаунта</string>
    <string name="title_activity_map">Map</string>
</resources>